# kb-solaria

./: .gitmodules  README.md  index.html  package-lock.json  package.json  pyproject.toml  run.py  tasks.py  vite.config.ts
src/: App.svelte  App.test.ts  app.css
src/lib/: socketStore.test.ts  socketStore.ts
src/lib/components/: ChannelSwitcher.svelte  InputGhost.svelte  InputGhost.test.ts  Inspector.svelte  Markdown.svelte  MessageList.svelte  ReactionPicker.svelte  Sidebar.svelte  StatusLine.svelte  ThreadBanner.svelte
src/lib/components/inspector/: Directory.svelte  StarMap.svelte
src/lib/logic/: Architecture.test.ts  BucketAnalyzer.test.ts  BucketAnalyzer.ts  ChatBuffer.ts  ChatWindow.ts  InputController.test.ts  InputController.ts  NetworkService.test.ts  NetworkService.ts  ReadManager.ts  ViewportLogic.test.ts  ViewportLogic.ts  Workspace.test.ts  Workspace.ts  keymap.ts  messagePredicates.ts  reactionAnalyzer.ts  starPhysics.ts  theme.ts  types.ts
src/lib/stores/: ackHandler.ts  chat.test.ts  chat.ts  cursorPositioning.ts  editor.ts  emoji.test.ts  emoji.ts  focus.ts  hud.ts  input.test.ts  input.ts  inspector.ts  reactionHandler.ts  readStatus.ts  unreadManager.ts
src/lib/test/: TestHarness.ts  TextRepresentation.ts  fixtures.ts
src/lib/test/scenarios/: channel-switching.test.ts  cursor-positioning.test.ts  inbox-workflow.test.ts  morning-paper.test.ts  reaction-handling.test.ts  thread-navigation.test.ts  triage-workflow.test.ts
src/lib/utils/: EventEmitter.ts  messageUtils.ts  readGranularity.ts  time.ts
